Update: cleanup project

--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -15,7 +15,7 @@
 // vendor
 
 // elements
-@import "./elements/button";
+// @import "./elements/button";
 
 // components
-@import "./components/demo";
+// @import "./components/demo";
