--- a/src/scss/custom/_colors.scss
+++ b/src/scss/custom/_colors.scss
@@ -5,10 +5,10 @@
 $background: #1f1f1f;
 // $darken: #1a1a1a;
 
-// $text: #fff;
+$text: #cdc6c3;
 // $text-sub: #888;
 // $text-dark: $background;
-// $headings: $primary;
+$headings: #f4efec;
 // $border: color.adjust($primary, $lightness: 20%);
 
 // $hover: color.adjust($primary, $lightness: -10%);
