--- a/src/scss/custom/_fonts.scss
+++ b/src/scss/custom/_fonts.scss
@@ -1,2 +1,2 @@
-@include font-face("Outfit", "outfit-regular.woff2", "" 400);
-@include font-face("Releway", "releway-regular.woff2", "" 400);
+@include font-face("Outfit", "outfit-regular.woff2", "", 400);
+@include font-face("Releway", "releway-regular.woff2", "", 400);
