--- a/src/scss/custom/_typography.scss
+++ b/src/scss/custom/_typography.scss
@@ -1,25 +1,33 @@
 body,
 .paragraph {
-  font-family: "Roboto", sans-serif;
-  font-size: px-to-rem(16);
+  font-family: "Releway", sans-serif;
+  font-size: px-to-rem(20);
   font-weight: 400;
   font-style: normal;
-  // color: $text;
+  color: $text;
 
   &_sub {
     // color: $text-sub;
   }
 }
 
+h1,
+h2,
+h3,
+h4,
+h5,
+h6,
 .heading {
-  font-family: "Roboto", sans-serif;
-  font-weight: 700;
-  // color: $text;
+  font-family: "Outfit", sans-serif;
+  font-weight: 400;
+  color: $text;
 }
 
 h1,
 .heading_h1 {
-  font-size: px-to-rem(48);
+  margin-bottom: px-to-rem(20);
+  font-size: px-to-rem(120);
+  line-height: 1;
 }
 
 h2,
