--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -15,7 +15,7 @@
 // vendor
 
 // elements
-// @import "./elements/button";
+@import "./elements/gallery-image";
 
 // components
 // @import "./components/demo";
