--- a/src/scss/custom/_typography.scss
+++ b/src/scss/custom/_typography.scss
@@ -4,6 +4,7 @@ body,
   font-size: px-to-rem(20);
   font-weight: 400;
   font-style: normal;
+  line-height: 1.6;
   color: $text;
 
   &_sub {
@@ -32,12 +33,14 @@ h1,
 
 h2,
 .heading_h2 {
-  font-size: px-to-rem(48);
+  font-size: px-to-rem(40);
+  line-height: 1.2;
 }
 
 h3,
 .heading_h3 {
-  font-size: px-to-rem(32);
+  font-size: px-to-rem(40);
+  line-height: 1.2;
 }
 
 h4,
