--- a/src/components/sections/gallery.hbs
+++ b/src/components/sections/gallery.hbs
@@ -1,26 +1,26 @@
 <div class="gallery">
   <div class="container gallery__container">
-    <div class="gallery__side gallery__side_left">
-      {{> gallery-image classes='gallery__image' image='../../assets/images/1.jpg'}}
-      {{> gallery-image classes='gallery__image' image='../../assets/images/2.jpg'}}
-      <div class="gallery__content">
+    <div class="gallery__side gallery__side_left" data-speed="1.2">
+      {{> gallery-image classes='gallery__image gallery__item' image='../../assets/images/1.jpg'}}
+      {{> gallery-image classes='gallery__image gallery__item' image='../../assets/images/2.jpg'}}
+      <div class="gallery__content gallery__item">
         <h2 class="gallery__heading">Creative floating scroll with amazing parallax effect</h2>
         <p class="gallery__paragraph">
           Lorem ipsum dolor sit amet consectetur adipisicing elit. Minus, blanditiis itaque repellendus ex amet eligendi.
         </p>
       </div>
-      {{> gallery-image classes='gallery__image' image='../../assets/images/6.jpg'}}
+      {{> gallery-image classes='gallery__image gallery__item' image='../../assets/images/6.jpg'}}
     </div>
     <div class="gallery__side gallery__side_right">
-      <div class="gallery__content">
+      <div class="gallery__content gallery__item">
         <h2 class="gallery__heading">Creative floating scroll with amazing parallax effect</h2>
         <p class="gallery__paragraph">
           Lorem ipsum dolor sit amet consectetur adipisicing elit. Minus, blanditiis itaque repellendus ex amet eligendi.
         </p>
       </div>
-      {{> gallery-image classes='gallery__image' image='../../assets/images/4.jpg'}}
-      {{> gallery-image classes='gallery__image' image='../../assets/images/3.jpg'}}
-      {{> gallery-image classes='gallery__image' image='../../assets/images/5.jpg'}}
+      {{> gallery-image classes='gallery__image gallery__item' image='../../assets/images/4.jpg'}}
+      {{> gallery-image classes='gallery__image gallery__item' image='../../assets/images/3.jpg'}}
+      {{> gallery-image classes='gallery__image gallery__item' image='../../assets/images/5.jpg'}}
     </div>
   </div>
 </div>
